# shogun-engine

./: .gitignore  CMakeLists.txt  ReadMe.md  models  shaders  textures  todo.md
lib/: ReadMe.md
lib/glad/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/glad/lib/glad/: glad.h
lib/glad/src/: glad.c
src/: editor.cpp  main.cpp  player.cpp  sceneSave.ssf  sceneSaveNew.ssf
src/core/: aabb.cpp  aabb.hpp  camera.cpp  camera.hpp  engine.cpp  engine.hpp  entity.cpp  entity.hpp  framebuffer.cpp  framebuffer.hpp  include.hpp  light.hpp  material.cpp  material.hpp  math.cpp  math.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  obj.cpp  obj.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  ssf.cpp  ssf.hpp  stb_image.h  texture.cpp  texture.hpp  vector.cpp  vector.hpp  window.cpp  window.hpp
src/core/gui/: button.cpp  button.hpp  guiElement.hpp  guiRenderer.cpp  guiRenderer.hpp  rect.cpp  rect.hpp
src/shaders/: 2dshader.frag  2dshader.vert  3dshader.frag  3dshader.vert  3dshaderlight.frag  3dtextureshader.frag  3dtextureshader.vert  pbrshader.frag
src/textures/: dirt.tga
src/util/: noise.cpp  noise.hpp
